--- a/ejs-example/package.json
+++ b/ejs-example/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2"
