--- a/ejs-example/package.json
+++ b/ejs-example/package.json
@@ -7,7 +7,8 @@
     "bcrypt": "^3.0.6",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "express-session": "^1.16.2"
+    "express-session": "^1.16.2",
+    "mongodb": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
